--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "lint": "bun run prettier src -c",
     "lint:fix": "bun run prettier src -w",
     "coverage": "bun run vitest run --coverage",
-    "vt:generate": "bun run esbuild.js && rtgl vt generate --skip-screenshots",
+    "vt:generate": "bun run esbuild.js && rtgl vt generate",
     "vt:docker": "bun run esbuild.js && docker run --rm --user $(id -u):$(id -g) -e RTGL_VT_DEBUG=true -v \"$PWD:/app\" -w /app han4wluc/rtgl:playwright-v1.57.0-rtgl-v1.0.0-rc12 rtgl vt screenshot --wait-event vt:ready --concurrency 2",
     "vt:report": "bun run vt:docker && rtgl vt report",
     "vt:accept": "rtgl vt accept",
