--- a/.github/workflows/publish-npm.yaml
+++ b/.github/workflows/publish-npm.yaml
@@ -29,11 +29,11 @@ jobs:
         run: bun run build
 
       # Setup .npmrc file to publish to npm
-      - uses: actions/setup-node@v3
+      - uses: actions/setup-node@v4
         with:
-          node-version: "20.x"
+          node-version: "22.x"
           registry-url: "https://registry.npmjs.org"
 
       # Publish to npm
       - name: Publish to npm (Trusted)
-        run: npm publish --access public
+        run: npm publish --access public --provenance
