--- a/.github/workflows/publish-npm.yaml
+++ b/.github/workflows/publish-npm.yaml
@@ -31,7 +31,7 @@ jobs:
       # Setup .npmrc file to publish to npm
       - uses: actions/setup-node@v4
         with:
-          node-version: "24.x"
+          node-version: "24.13.1"
           registry-url: "https://registry.npmjs.org"
 
       - name: Print Node and npm versions
