--- a/rettangoli.config.yaml
+++ b/rettangoli.config.yaml
@@ -47,3 +47,5 @@ vt:
           files: "variables"
         - title: "initialization"
           files: "initialization"
+        - title: "Slider"
+          files: "slider"
